<resources>
    <string name="app_name" translatable="false">MaterialWaterTraining</string>
    <string name="add_button">Añadir</string>
    <string name="update_button">Editar</string>
    <string name="delete_button">Borrar</string>
    <string name="fab">Añadir</string>
    <string name="title_activity_transition_edit">Editar Nombre</string>
    <string name="title_activity_transition_add">Añadir Nombre</string>
    <string name="select_language">Selecciona idioma</string>
    <string name="spanish">Spanish</string>
    <string name="english">English</string>
    <string name="nombre">nombre</string>
    <string name="fecha">fecha</string>
    <string name="kmH">km/h</string>
    <string name="tipo">tipo</string>
    <string name="piscina_grande">Piscina grande</string>
    <string name="piscina_mediana">Piscina mediana</string>
    <string name="aguas_abiertas">Aguas abiertas</string>
    <string name="tiempo">tiempo</string>
    <string name="distancia">distancia</string>
    <string name="date">Fecha</string>
    <string name="Kilometros">kilometros</string>
    <string name="metros">metros</string>
    <string name="segundos">segundos</string>
    <string name="minutos">minutos</string>
    <string name="horas">horas</string>
    <string name="duracion">duracion</string>
    <string-array name="languages" >
        <item>@string/spanish</item>
        <item>@string/english</item>
    </string-array>
</resources>
