<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2">


        <!-- Title, secondary and supporting text -->


        <TextView
            android:id="@+id/cardFecha"
            android:layout_width="90dp"
            android:layout_height="38dp"
            android:layout_marginStart="13dp"
            android:layout_marginEnd="16dp"
            android:text="@string/fecha"
            android:textAppearance="?attr/textAppearanceBody2"
            android:textColor="?android:attr/textColorSecondary"
            app:layout_constraintBottom_toBottomOf="@+id/cardNombre"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/cardNombre" />

        <TextView
            android:id="@+id/cardHoras"
            android:layout_width="61dp"
            android:layout_height="43dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/horas"
            android:textAppearance="?attr/textAppearanceBody2"
            android:textColor="?android:attr/textColorSecondary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardKilometros" />

        <TextView
            android:id="@+id/cardMinutos"
            android:layout_width="61dp"
            android:layout_height="43dp"
            android:layout_marginStart="176dp"
            android:layout_marginTop="8dp"
            android:text="@string/minutos"
            android:textAppearance="?attr/textAppearanceBody2"
            android:textColor="?android:attr/textColorSecondary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardMetros" />

        <TextView
            android:id="@+id/cardSegundos"
            android:layout_width="61dp"
            android:layout_height="43dp"
            android:layout_marginStart="96dp"
            android:layout_marginTop="8dp"
            android:text="@string/segundos"
            android:textAppearance="?attr/textAppearanceBody2"
            android:textColor="?android:attr/textColorSecondary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardMetros" />

        <TextView
            android:id="@+id/cardNombre"
            android:layout_width="261dp"
            android:layout_height="38dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="28dp"
            android:text="@string/nombre"
            android:textAppearance="?attr/textAppearanceHeadline6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/cardKilometros"
            android:layout_width="61dp"
            android:layout_height="43dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"

            android:text="@string/Kilometros"
            android:textAppearance="?attr/textAppearanceBody2"
            android:textColor="?android:attr/textColorSecondary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardNombre" />

        <TextView
            android:id="@+id/cardMetros"
            android:layout_width="61dp"
            android:layout_height="43dp"
            android:layout_marginStart="96dp"
            android:layout_marginTop="16dp"

            android:text="@string/metros"
            android:textAppearance="?attr/textAppearanceBody2"
            android:textColor="?android:attr/textColorSecondary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardNombre" />

        <TextView
            android:id="@+id/cardTipo"
            android:layout_width="90dp"
            android:layout_height="30dp"

            android:layout_marginEnd="8dp"
            android:text="@string/tipo"
            android:textAppearance="?attr/textAppearanceBody2"
            android:textColor="?android:attr/textColorSecondary"
            app:layout_constraintBottom_toBottomOf="@+id/cardKilometros"
            app:layout_constraintEnd_toEndOf="@+id/cardFecha"
            app:layout_constraintStart_toStartOf="@+id/cardFecha" />

        <!-- Buttons -->


    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>